--- a/accounts/templates/accounts/teacher/dashboard.html
+++ b/accounts/templates/accounts/teacher/dashboard.html
@@ -1,4 +1,4 @@
-{% extends 'accounts/base.html' %}
+{% extends 'accounts/teacher/base.html' %}
 {% block title %}Dashboard{% endblock %}
 {% block content %}
 
@@ -9,7 +9,7 @@
         <a href="{% url 'logout' %}">Logout</a>
         <a href="{% url 'password_change' %}">Change password</a>
     {% else %}
-        <a href="{% url 'login' %}">Login</a>
+        <a href="{% url 'accounts:login' %}">Login</a>
     {% endif %}
 </div>
 {% endblock %}
