--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -4,6 +4,6 @@
     {% if user.is_authenticated %}
         <a href="{% url 'logout' %}">Logout</a>
     {% else %}
-        <a href="{% url 'login' %}">Login</a>
+        <a href="{% url 'accounts:login' %}">Login</a>
     {% endif %}
 </div>
