--- a/accounts/templates/accounts/student/student-profile.html
+++ b/accounts/templates/accounts/student/student-profile.html
@@ -5,5 +5,18 @@
 
 <div class="container">
     <p>Student Profile Page</p>
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert {{  message.tags }} alert-dismissible fade show" role="alert">
+        {{ message }}
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    {% endfor %}
+    {% endif %}
+    <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{form.as_p}}
+        <button type="submit">submit</button>
+    </form>
 </div>
 {% endblock %} 
