--- a/accounts/templates/accounts/teacher/dashboard.html
+++ b/accounts/templates/accounts/teacher/dashboard.html
@@ -2,14 +2,17 @@
 {% block title %}Dashboard{% endblock %}
 {% block content %}
 
-<h3>Hello, {{ user.username|default:'Guest' }}!</h3>
 
-<div>
-    {% if user.is_authenticated %}
-        <a href="{% url 'logout' %}">Logout</a>
-        <a href="{% url 'password_change' %}">Change password</a>
-    {% else %}
-        <a href="{% url 'accounts:login' %}">Login</a>
+<div class="container">
+    <h3>Hello, {{ user.get_full_name|default:'Guest' }}!</h3>   
+    <p>Welcome to your Dashboard.</p>
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert {{  message.tags }} alert-dismissible fade show" role="alert">
+        {{ message }}
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    {% endfor %}
     {% endif %}
 </div>
 {% endblock %}
