--- a/accounts/templates/accounts/teacher/teacher-profile.html
+++ b/accounts/templates/accounts/teacher/teacher-profile.html
@@ -5,5 +5,10 @@
 
 <div class="container">
     <p>Teacher Profile Page</p>
+    <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{form.as_p}}
+        <button type="submit">submit</button>
+    </form>
 </div>
 {% endblock %}
