--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -29,7 +29,7 @@
             Remember me
         </label>
             </div>
-            <a href="{% url 'accounts:register' %}">Forgot Password?</a>
+            <a href="{% url 'accounts:register' %}">Sign up</a>
             <a href="{% url 'password_reset' %}">Forgot Password?</a>
         </div>
     </div>
